# autosvg

./: .all-contributorsrc  .gitignore  .gitmodules  CMakeLists.txt  README.md  autosvg-wasm.cbp  build.sh
src/autosvg_cli/: CMakeLists.txt
src/autosvg_ui/: package-lock.json  package.json
src/autosvg_ui/public/: autosvg-wasm-worker.js  autosvg-wasm.js  autosvg-wasm.wasm  index.html  manifest.json  sitemap.xml
src/autosvg_ui/src/: App.module.scss  App.tsx  index.scss  index.tsx  react-app-env.d.ts
src/autosvg_ui/src/assets/scss/: theme.scss  variables.scss
src/autosvg_ui/src/components/Editor/: Editor.tsx
src/cpp/: AutosvgCLI.cpp  AutosvgCLI.hpp  AutosvgWASM.cpp  AutosvgWASM.hpp  autosvg.cpp  autosvg.hpp
src/cpp/core/: Operations.cpp  Operations.hpp
src/cpp/utils/: Constants.hpp  CurveUtils.cpp  CurveUtils.hpp  underscore.hpp
